crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__01_remove_trigger.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Removes the trigger that was added in #18260 and then reverted
drop trigger if exists event_stats_increment_counts_trigger on events;
drop function IF exists event_stats_increment_counts();
