crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__04_thread_subscriptions_seq.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

create sequence thread_subscriptions_sequence
	-- Synapse streams start at 2, because the default position is 1
	-- so any item inserted at position 1 is ignored.
	-- This is also what existing streams do, except they use `setval(..., 1)`
	-- which is semantically the same except less obvious.
	start with 2;
