crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__05_thread_subscriptions_comments.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

comment on table thread_subscriptions is 'Tracks local users that subscribe to threads';

comment on column thread_subscriptions.subscribed is 'Whether the user is subscribed to the thread or not. We track unsubscribed threads because we need to stream the subscription change to the client.';

comment on column thread_subscriptions.automatic is 'True if the user was subscribed to the thread automatically by their client, or false if the client manually requested the subscription.';
