crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__06_device_federation_inbox_index.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

-- Background update that adds an index to `device_federation_inbox.received_ts`
insert into background_updates (ordering, update_name, progress_json)
values (9206, 'device_federation_inbox_received_ts_index', '{}');
