crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__06_threads_last_sent_stream_ordering_comments.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

comment on column threads.latest_event_id is 'the ID of the event that is latest, ordered by (topological_ordering, stream_ordering)';

comment on column threads.topological_ordering is $$the topological ordering of the thread''s LATEST event.
Used as the primary way of ordering threads by recency in a room.$$;

comment on column threads.stream_ordering is $$the stream ordering of the thread's LATEST event.
Used as a tie-breaker for ordering threads by recency in a room, when the topological order is a tie.
Also used for recency ordering in sliding sync.$$;
