crates/formatter/tests/snapshots/snapshots__synapse__main__delta__92__07_add_user_reports.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

create table user_reports (
	id bigint not null primary key,
	received_ts bigint not null,
	target_user_id text not null,
	user_id text not null,
	reason text not null
);
create index user_reports_target_user_id on user_reports (target_user_id); -- for lookups
create index user_reports_user_id on user_reports (user_id); -- for lookups
